# made-hpc-hw3

./: CMakeLists.txt  README.md
.github/workflows/: analyze.yaml  build.yaml
matrix-mul/: CMakeLists.txt
matrix-mul/include/: matrix.h  stdafx.h  utils.h
matrix-mul/src/: main.cpp  matrix.cpp  test.cpp  utils.cpp
openmp/: CMakeLists.txt
openmp/src/: omp_bugparfoc.c  omp_bugreduction.c  omp_hello.c  omp_monte_carlo.cpp  omp_outmes.cpp  omp_parsec.c  omp_privateshared.c  omp_sumarray.c
reports/: docker_test.txt  linpack.txt  native_os_test.txt
scripts/: scripts.sh
